# cuiui

./: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
coel/: application.cpp  application.hpp  core.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
cuiui/: constraint.hpp  core.hpp  ui_components.cpp  ui_components.hpp  units.hpp  user_interface.cpp  user_interface.hpp
include/cuiui/: cuiui.hpp
include/cuiui/math/: matrix.hpp  rect.hpp  types.hpp  utility.hpp  vector.hpp
include/cuiui/platform/: defaults.hpp  null.hpp  win32.hpp  x11.hpp
samples/: CMakeLists.txt
samples/1_getting_started/1_basic/: context.hpp  events.hpp  main.cpp  render.hpp  render_element.hpp  window.hpp
samples/1_getting_started/1_basic/ui/: button.hpp  checkbox.hpp  coloredit.hpp  shapes.hpp  slider.hpp  text.hpp
src/: CMakeLists.txt  context.cpp  cuiui.cpp  platform.hpp
src/platform/null/: context.cpp
src/platform/win32/: context.cpp
src/platform/x11/: context.cpp
src/win32/: context.cpp  types.hpp  window.cpp
